--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -266,7 +266,7 @@
     box-shadow: 0px 11px 48px rgba(51, 51, 51, 0.06);
     border-radius: 32px;
     padding: 24px;
-    cursor: pointer;
+    cursor: grab;
 }
 
 .slider-description {
