--- a/src/styles/sections/reature.scss
+++ b/src/styles/sections/reature.scss
@@ -132,6 +132,7 @@
         padding-top: 40px;
         padding-left: 20px;
         padding-right: 20px;
+        cursor: grab;
         & .feature-slide-img {
             position: relative;
         }
@@ -210,4 +211,8 @@
     & svg {
         filter: invert(53%) sepia(95%) saturate(3063%) hue-rotate(129deg) brightness(102%) contrast(87%);
     }
+}
+
+.none {
+    display: none !important;
 }
