--- a/src/views/sections/_header.html
+++ b/src/views/sections/_header.html
@@ -45,57 +45,66 @@
             </ul>
             <a href="#" class="nav-sign">Sign Up!</a>
         </nav>
-        <div class="slider">
-            <div class="swiper mySwiper">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="slider-box">
-                            <img src="./img/slider1-1.png" alt="slide">
-                            <div class="slider-description">
-                                <h4>1K+ People</h4>
-                                <span>Successfully Getting Home</span>
-                            </div>
-                        </div>
+
+        <div class="slider swiper mySwiper">
+            <div class="swiper-wrapper">
+                <!-- <div class="swiper-slide"> -->
+                <div class="slider-box swiper-slide">
+                    <img src="./img/slider1-1.png" alt="slide">
+                    <div class="slider-description">
+                        <h4>1K+ People</h4>
+                        <span>Successfully Getting Home</span>
                     </div>
-                    <div class="swiper-slide">
-                        <div class="slider-box">
-                            <img src="./img/slider1-2.png" alt="slide">
-                            <div class="slider-description">
-                                <h4>56 Houses</h4>
-                                <span>Sold Monthly</span>
-                            </div>
-                        </div>
+                    <!-- </div> -->
+                </div>
+                <!-- <div class="swiper-slide"> -->
+                <div class="slider-box swiper-slide">
+                    <img src="./img/slider1-2.png" alt="slide">
+                    <div class="slider-description">
+                        <h4>56 Houses</h4>
+                        <span>Sold Monthly</span>
                     </div>
-                    <div class="swiper-slide">
-                        <div class="slider-box">
-                            <img src="./img/slider1-3.png" alt="slide">
-                            <div class="slider-description">
-                                <h4>4K+ intel</h4>
-                                <span>People Looking for New Homes</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="slider-box">
-                            <img src="./img/slider1-2.png" alt="slide">
-                            <div class="slider-description">
-                                <h4>1K+ People</h4>
-                                <span>Successfully Getting Home</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="slider-box">
-                            <img src="./img/slider1-3.png" alt="slide">
-                            <div class="slider-description">
-                                <h4>4K+ intel</h4>
-                                <span>People Looking for New Homes</span>
-                            </div>
-                        </div>
+                    <!-- </div> -->
+                </div>
+                <!-- <div class="swiper-slide"> -->
+                <div class="slider-box swiper-slide">
+                    <img src="./img/slider1-3.png" alt="slide">
+                    <div class="slider-description">
+                        <h4>4K+ intel</h4>
+                        <span>People Looking for New Homes</span>
                     </div>
                 </div>
+                <!-- </div> -->
+                <!-- <div class="swiper-slide"> -->
+                <div class="slider-box swiper-slide">
+                    <img src="./img/slider1-2.png" alt="slide">
+                    <div class="slider-description">
+                        <h4>1K+ People</h4>
+                        <span>Successfully Getting Home</span>
+                    </div>
+                </div>
+                <!-- </div> -->
+                <!-- <div class="swiper-slide"> -->
+                <div class="slider-box swiper-slide">
+                    <img src="./img/slider1-3.png" alt="slide">
+                    <div class="slider-description">
+                        <h4>4K+ intel</h4>
+                        <span>People Looking for New Homes</span>
+                    </div>
+                </div>
+                <!-- </div> -->
+                <!-- <div class="swiper-slide"> -->
+                <div class="slider-box swiper-slide">
+                    <img src="./img/slider1-2.png" alt="slide">
+                    <div class="slider-description">
+                        <h4>1K+ People</h4>
+                        <span>Successfully Getting Home12</span>
+                    </div>
+                </div>
+                <!-- </div> -->
             </div>
         </div>
+
     </div>
 
 </header>
