--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -176,6 +176,10 @@
 .header-box-right {
     position: relative;
     width: calc(50% - 10px);
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-between;
 }
 
 .nav {
@@ -252,11 +256,13 @@
 }
 
 .slider {
-    display: flex;
-    position: absolute;
-    bottom: 50px;
-    // overflow-x: hidden;
+    // display: flex;
+    // position: absolute;
+    // bottom: 50px;
+    // overflow: hidden;
     width: 720px;
+    // width: 100%;
+    margin-bottom: 48px;
 }
 
 .slider-box {
