--- a/src/views/sections/_header.html
+++ b/src/views/sections/_header.html
@@ -1,16 +1,16 @@
 <header class="header conteiner">
     <div class="header-box-left">
-        <h1 class="header-logo">
+        <a class="header-logo" href="#">
             <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M0 4C0 1.79086 1.79086 0 4 0H28C30.2091 0 32 1.79086 32 4V8C32 21.2548 21.2548 32 8 32H4C1.79086 32 0 30.2091 0 28V4Z" fill="#F59E0B"/>
             <path d="M4 8C4 5.79086 5.79086 4 8 4H32C34.2091 4 36 5.79086 36 8V12C36 25.2548 25.2548 36 12 36H8C5.79086 36 4 34.2091 4 32V8Z" fill="#4BE4C9"/>
             </svg>
-            <a href="#">Hounter</a>
+            <span>Hounter</span>
             <div class="header-spot-one"></div>
             <div class="header-spot-two"></div>
-        </h1>
+        </a>
         <div>
-            <h2 class="header-title">find the place to live <span class="header-title-span">your dreams</span> easily here</h2>
+            <h1 class="header-title">find the place to live <span class="header-title-span">your dreams</span> easily here</h1>
             <p class="header-description">Everything you need about finding your place to live will be here, where it will be easier for you</p>
             <!-- <div class="header-search-box"> -->
             <form class="search">
@@ -19,7 +19,7 @@
                     </svg>
 
                 <input type="search" class="search-input" placeholder="Search for the location you want!">
-                <button class="search-btn">Search</button>
+                <button class="search-btn" type="button">Search</button>
             </form>
 
             <!-- </div> -->
@@ -48,60 +48,60 @@
 
         <div class="slider swiper mySwiper">
             <div class="swiper-wrapper">
-                <!-- <div class="swiper-slide"> -->
-                <div class="slider-box swiper-slide">
-                    <img src="./img/slider1-1.png" alt="slide">
-                    <div class="slider-description">
-                        <h4>1K+ People</h4>
-                        <span>Successfully Getting Home</span>
-                    </div>
-                    <!-- </div> -->
-                </div>
-                <!-- <div class="swiper-slide"> -->
-                <div class="slider-box swiper-slide">
-                    <img src="./img/slider1-2.png" alt="slide">
-                    <div class="slider-description">
-                        <h4>56 Houses</h4>
-                        <span>Sold Monthly</span>
-                    </div>
-                    <!-- </div> -->
-                </div>
-                <!-- <div class="swiper-slide"> -->
-                <div class="slider-box swiper-slide">
-                    <img src="./img/slider1-3.png" alt="slide">
-                    <div class="slider-description">
-                        <h4>4K+ intel</h4>
-                        <span>People Looking for New Homes</span>
+                <div class="swiper-slide">
+                    <div class="slider-box">
+                        <img src="./img/slider1-1.png" alt="slide">
+                        <div class="slider-description">
+                            <h4>1K+ People</h4>
+                            <span>Successfully Getting Home</span>
+                        </div>
                     </div>
                 </div>
-                <!-- </div> -->
-                <!-- <div class="swiper-slide"> -->
-                <div class="slider-box swiper-slide">
-                    <img src="./img/slider1-2.png" alt="slide">
-                    <div class="slider-description">
-                        <h4>1K+ People</h4>
-                        <span>Successfully Getting Home</span>
+                <div class="swiper-slide">
+                    <div class="slider-box">
+                        <img src="./img/slider1-2.png" alt="slide">
+                        <div class="slider-description">
+                            <h4>56 Houses</h4>
+                            <span>Sold Monthly</span>
+                        </div>
                     </div>
                 </div>
-                <!-- </div> -->
-                <!-- <div class="swiper-slide"> -->
-                <div class="slider-box swiper-slide">
-                    <img src="./img/slider1-3.png" alt="slide">
-                    <div class="slider-description">
-                        <h4>4K+ intel</h4>
-                        <span>People Looking for New Homes</span>
+                <div class="swiper-slide">
+                    <div class="slider-box">
+                        <img src="./img/slider1-3.png" alt="slide">
+                        <div class="slider-description">
+                            <h4>4K+ intel</h4>
+                            <span>People Looking for New Homes</span>
+                        </div>
                     </div>
                 </div>
-                <!-- </div> -->
-                <!-- <div class="swiper-slide"> -->
-                <div class="slider-box swiper-slide">
-                    <img src="./img/slider1-2.png" alt="slide">
-                    <div class="slider-description">
-                        <h4>1K+ People</h4>
-                        <span>Successfully Getting Home12</span>
+                <div class="swiper-slide">
+                    <div class="slider-box">
+                        <img src="./img/slider1-2.png" alt="slide">
+                        <div class="slider-description">
+                            <h4>1K+ People</h4>
+                            <span>Successfully Getting Home</span>
+                        </div>
                     </div>
                 </div>
-                <!-- </div> -->
+                <div class="swiper-slide">
+                    <div class="slider-box">
+                        <img src="./img/slider1-3.png" alt="slide">
+                        <div class="slider-description">
+                            <h4>4K+ intel</h4>
+                            <span>People Looking for New Homes</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider-box">
+                        <img src="./img/slider1-2.png" alt="slide">
+                        <div class="slider-description">
+                            <h4>1K+ People</h4>
+                            <span>Successfully Getting Home12</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
