--- a/src/views/sections/_tour.html
+++ b/src/views/sections/_tour.html
@@ -53,63 +53,12 @@
         </div>
     </div>
 
-    <div style="position: relative;">
-        <div class="tour-right mySwiper2 swiper">
-            <div class="swiper-wrapper">
-                <div class="swiper-wrapper">
-                    <div class="tour-slide-one swiper-slide">
-                        <img src="./img/tour-img1.png" alt="main-img" class="tour-slide-img">
-                    </div>
-                </div>
-                <div class="tour-slide-one swiper-slide">
-                    <img src="./img/tour-img2.png" alt="img" class="tour-slide-img">
-                </div>
-                <div class="tour-slide-one swiper-slide">
-                    <img src="./img/tour-img3.png" alt="img" class="tour-slide-img">
-                </div>
-                <div class="tour-slide-one swiper-slide">
-                    <img src="./img/tour-img4.png" alt="img" class="tour-slide-img">
-                </div>
-            </div>
-        </div>
-
-
-
-        <!-- <div class="tour-second-slider">
-            <div class=" mySwiper3 swiper">
-                <div class="swiper-wrapper">
-                    <div class="tour-second-slider-one ">
-                        <img src="./img/tour-img1.png" alt="main-img" class="tour-slide-img swiper-slide">
-                    </div>
-                    <div class="tour-second-slider-two ">
-                        <img src="./img/tour-img2.png" alt="img" class="tour-slide-img swiper-slide">
-                    </div>
-                    <div class="tour-second-slider-two ">
-                        <img src="./img/tour-img3.png" alt="img" class="tour-slide-img swiper-slide">
-                    </div>
-                    <div class="tour-second-slider-one ">
-                        <img src="./img/tour-img4.png" alt="img" class="tour-slide-img swiper-slide">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
-        <!-- <div class="tour-right"> -->
-        <!-- <div class="swiper-wrapper"> -->
-        <!-- <div class="tour-slide-one ">
-            <img src="./img/tour-img1.png" alt="main-img" class="tour-slide-img">
-        </div>
-        <div class="tour-slide-two ">
-            <img src="./img/tour-img2.png" alt="img" class="tour-slide-img">
-        </div>
-        <div class="tour-slide-three ">
-            <img src="./img/tour-img3.png" alt="img" class="tour-slide-img">
-        </div>
-        <div class="tour-slide-four ">
-            <img src="./img/tour-img4.png" alt="img" class="tour-slide-img">
-        </div> -->
-        <!-- </div> -->
-        <!-- </div> -->
-
-
+    <div class="slider3">
+        <div class="slide3" style="width: 488px; height: 416px; background-image: url(./img/tour-img1.png);"></div>
+        <div class="slide3" style="width: 300px; height: 168px; background-image: url(./img/tour-img2.png);"></div>
+        <div class="slide3" style="width: 96px; height: 80px; background-image: url(./img/tour-img3.png);"></div>
+        <div class="slide3" style="width: 96px; height: 80px; background-image: url(./img/tour-img4.png);"></div>
+    </div>
+    <div class="tour-spot-one"></div>
+    <div class="tour-spot-two"></div>
 </section>
