--- a/src/views/sections/_partners.html
+++ b/src/views/sections/_partners.html
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="main-artikle">
-            <img src="./img/partenrs-img-main1.png" alt="main-img">
+            <img src="./img/partenrs-img-main1.png" alt="main-img" class="main-artikle-img">
             <div class="main-artikle-user">
                 <img src="./img/partenrs-user4.png" alt="autor">
                 <span>Cameron Williamson</span>
