--- a/src/styles/sections/footer.scss
+++ b/src/styles/sections/footer.scss
@@ -31,15 +31,15 @@
         filter: blur(60px);
         transform: rotate(90deg);
         z-index: -1;
-        right: -100px;
-        top: -100px;
+        right: 50px;
+        top: -75px;
     }
     & .footer-spot-two {
         position: absolute;
         width: 438px;
         height: 494px;
         top: 0;
-        right: 0;
+        right: 150px;
         background: #B9FF82;
         opacity: 0.3;
         filter: blur(60px);
@@ -70,11 +70,17 @@
     }
     & .contact li {
         padding-bottom: 18px;
+        @media (min-width: 320px) and (max-width: 530px) {
+            padding-bottom: 12px;
+        }
     }
     & .contact {
         width: 50%;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+        @media (min-width: 320px) and (max-width: 530px) {
+            font-size: 14px;
+        }
         & .contact-title {
             font-weight: 600;
             font-size: 18px;
@@ -82,6 +88,10 @@
             text-transform: capitalize;
             color: #0E1735;
             padding-bottom: 24px;
+            @media (min-width: 320px) and (max-width: 530px) {
+                font-size: 16px;
+                padding-bottom: 18px;
+            }
         }
     }
 }
