--- a/src/styles/sections/review.scss
+++ b/src/styles/sections/review.scss
@@ -3,6 +3,7 @@
      margin: 0 auto;
      text-align: center;
      padding-bottom: 160px;
+     overflow: hidden;
      & .cont {
          width: 100vw;
          position: relative;
@@ -40,6 +41,9 @@
          color: #1B1C57;
          padding-top: 12px;
          padding-bottom: 40px;
+         @media (min-width: 320px) and (max-width: 530px) {
+             font-size: 24px;
+         }
      }
  }
  
@@ -60,6 +64,10 @@
          box-shadow: 0px 9px 32px rgba(89, 92, 219, 0.05);
          border-radius: 16px;
          text-align: start;
+         @media (min-width: 320px) and (max-width: 740px) {
+             position: static;
+             width: auto;
+         }
          & .review-user-flex {
              display: flex;
              justify-content: space-between;
