--- a/src/styles/sections/subscribe.scss
+++ b/src/styles/sections/subscribe.scss
@@ -1,6 +1,10 @@
 .subscribe {
+    // width: 100%;
     font-family: 'Lexend', sans-serif;
     background-image: url(../../img/subscribe.png);
+    background-repeat: no-repeat;
+    // background-size: contain;
+    border-radius: 32px;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -18,6 +22,13 @@
         text-align: center;
         text-transform: capitalize;
         color: #1B1C57;
+        @media (min-width: 320px) and (max-width: 991px) {
+            font-size: 28px;
+        }
+        @media (min-width: 320px) and (max-width: 530px) {
+            font-size: 22px;
+            line-height: 32px;
+        }
     }
 }
 
@@ -29,6 +40,9 @@
     border-radius: 32px;
     display: flex;
     align-items: center;
+    @media (min-width: 320px) and (max-width: 530px) {
+        width: auto !important;
+    }
     & .search-email {
         flex-grow: 2;
         border: none;
@@ -50,6 +64,9 @@
         cursor: pointer;
         display: flex;
         justify-content: space-evenly;
+        @media (min-width: 320px) and (max-width: 530px) {
+            width: auto !important;
+        }
     }
 }
 
@@ -57,48 +74,72 @@
     position: absolute;
     left: 45px;
     top: 35px;
+    @media (min-width: 320px) and (max-width: 768px) {
+        display: none;
+    }
 }
 
 .subs-user-box-one img:nth-child(2) {
     position: absolute;
     left: 182px;
     top: 42px;
+    @media (min-width: 320px) and (max-width: 991px) {
+        display: none;
+    }
 }
 
 .subs-user-box-one img:nth-child(3) {
     position: absolute;
     left: 40px;
     bottom: 52px;
+    @media (min-width: 320px) and (max-width: 768px) {
+        display: none;
+    }
 }
 
 .subs-user-box-one img:nth-child(4) {
     position: absolute;
     left: 182px;
     bottom: 75px;
+    @media (min-width: 320px) and (max-width: 991px) {
+        display: none;
+    }
 }
 
 .subs-user-box-two img:nth-child(1) {
     position: absolute;
     right: 185px;
     top: 40px;
+    @media (min-width: 320px) and (max-width: 991px) {
+        display: none;
+    }
 }
 
 .subs-user-box-two img:nth-child(2) {
     position: absolute;
     right: 156px;
     top: 132px;
+    @media (min-width: 320px) and (max-width: 991px) {
+        display: none;
+    }
 }
 
 .subs-user-box-two img:nth-child(3) {
     position: absolute;
     right: 50px;
     top: 95px;
+    @media (min-width: 320px) and (max-width: 768px) {
+        display: none;
+    }
 }
 
 .subs-user-box-two img:nth-child(4) {
     position: absolute;
     right: 72px;
     bottom: 55px;
+    @media (min-width: 320px) and (max-width: 768px) {
+        display: none;
+    }
 }
 
 #result {
