--- a/src/styles/sections/review.scss
+++ b/src/styles/sections/review.scss
@@ -4,6 +4,7 @@
      text-align: center;
      padding-bottom: 160px;
      overflow: hidden;
+     padding-top: 5px;
      & .cont {
          width: 100vw;
          position: relative;
