--- a/src/styles/sections/tour.scss
+++ b/src/styles/sections/tour.scss
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     position: relative;
-    @media (min-width: 320px) and (max-width: 1025px) {
+    @media (min-width: 320px) and (max-width: 971px) {
         display: flex;
         flex-direction: column;
     }
@@ -15,6 +15,10 @@
     display: flex;
     width: 50%;
     flex-direction: column;
+    @media (min-width: 320px) and (max-width: 971px) {
+        width: 100%;
+        align-items: center;
+    }
     & .span-recomendation {
         font-style: normal;
         font-weight: 500;
@@ -43,6 +47,10 @@
         text-transform: capitalize;
         color: #1B1C57;
         padding-top: 12px;
+        @media (min-width: 320px) and (max-width: 530px) {
+            font-size: 22px;
+            text-align: center;
+        }
     }
     & .tour-left-desc1 {
         font-weight: 400;
@@ -52,6 +60,11 @@
         width: 420px;
         padding-top: 16px;
         padding-bottom: 16px;
+        @media (min-width: 320px) and (max-width: 530px) {
+            font-size: 14px;
+            width: auto;
+            text-align: center;
+        }
     }
     & .tour-left-desc2 {
         font-weight: 600;
@@ -59,6 +72,9 @@
         line-height: 28px;
         color: #1B1C57;
         opacity: 0.75;
+        @media (min-width: 320px) and (max-width: 530px) {
+            font-size: 14px;
+        }
     }
     & .desc-house-detail {
         display: grid;
@@ -67,16 +83,38 @@
         width: 420px;
         align-items: center;
         padding-top: 22px;
+        @media (min-width: 320px) and (max-width: 530px) {
+            font-size: 14px;
+            width: auto;
+        }
+        @media (min-width: 531px) and (max-width: 971px) {
+            display: flex;
+            padding-bottom: 20px;
+            padding-top: 0;
+            width: auto;
+        }
+    }
+    & .desc-house-detail svg {
+        @media (min-width: 531px) and (max-width: 971px) {
+            padding-left: 10px;
+            padding-right: 10px;
+        }
     }
     & .call-manager {
         padding-top: 72px;
         display: flex;
         align-items: center;
+        @media (min-width: 320px) and (max-width: 971px) {
+            display: none;
+        }
         & .manager-box {
             display: flex;
             flex-direction: column;
             padding-left: 24px;
             padding-right: 59px;
+            @media (min-width: 320px) and (max-width: 1025px) {
+                padding-right: 9px;
+            }
             & .manager-box-name {
                 font-weight: 500;
                 font-size: 18px;
@@ -137,30 +175,64 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    // width: 688px;
-    // height: 416px;
+    align-items: center;
+    @media (min-width: 531px) and (max-width: 971px) {
+        padding-bottom: 20px;
+    }
+    @media (min-width: 320px) and (max-width: 530px) {
+        padding-bottom: 20px;
+    }
     & .slide3 {
         position: absolute;
-        // flex: 0 0 auto;
-        // margin-right: 10px;
         background-repeat: no-repeat;
         background-size: cover;
         border-radius: 4px;
     }
     & .slide3:nth-child(1) {
         right: 0;
+        @media (min-width: 531px) and (max-width: 971px) {
+            position: static;
+        }
+        @media (min-width: 320px) and (max-width: 530px) {
+            position: static;
+            width: 320px !important;
+            height: 270px !important;
+        }
     }
     & .slide3:nth-child(2) {
         right: 240px;
         bottom: 0;
+        @media (min-width: 531px) and (max-width: 971px) {
+            left: 50px;
+        }
+        @media (min-width: 320px) and (max-width: 530px) {
+            left: 0;
+            width: calc(320px * 2 / 3) !important;
+            height: calc(168px * 2 / 3) !important;
+        }
     }
     & .slide3:nth-child(3) {
         right: 130px;
         bottom: 0;
+        @media (min-width: 531px) and (max-width: 971px) {
+            bottom: 88px;
+            left: 360px;
+        }
+        @media (min-width: 320px) and (max-width: 530px) {
+            bottom: 58px;
+            left: 220px;
+        }
     }
     & .slide3:nth-child(4) {
         right: 20px;
         bottom: 0;
+        @media (min-width: 531px) and (max-width: 971px) {
+            left: 360px;
+        }
+        @media (min-width: 320px) and (max-width: 530px) {
+            left: 220px;
+            bottom: -30px;
+        }
     }
 }
 
@@ -175,6 +247,13 @@
     z-index: -1;
     top: -50px;
     right: 40px;
+    @media (min-width: 320px) and (max-width: 530px) {
+        width: 238px;
+        height: 294px;
+    }
+    @media (min-width: 1440px) {
+        right: 0;
+    }
 }
 
 .tour-spot-two {
@@ -187,5 +266,60 @@
     transform: rotate(90deg);
     z-index: -1;
     top: 65px;
-    right: 10px;
+    right: 30px;
+    @media (min-width: 320px) and (max-width: 530px) {
+        width: 238px;
+        height: 294px;
+    }
+    @media (min-width: 1440px) {
+        right: -100px;
+    }
+}
+
+.call-manager1 {
+    display: none;
+    @media (min-width: 320px) and (max-width: 971px) {
+        display: flex;
+        padding-top: 52px;
+        align-items: center;
+        justify-content: space-around;
+        @media (min-width: 320px) and (max-width: 530px) {
+            flex-direction: column;
+        }
+    }
+    & .call-manager1-box {
+        display: flex;
+        align-items: center;
+    }
+    & .manager-box {
+        display: flex;
+        flex-direction: column;
+        padding-left: 24px;
+        padding-right: 59px;
+        & .manager-box-name {
+            font-weight: 500;
+            font-size: 18px;
+            line-height: 24px;
+            color: #0E1735;
+        }
+        & .manager-box-position {
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 24px;
+            color: #888B97;
+        }
+    }
+    & .call-btn {
+        background-color: #10B981;
+        border-radius: 32px;
+        padding: 12px 16px;
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: white;
+        padding-left: 20px;
+    }
+    & .call-btn svg {
+        padding-right: 20px;
+    }
 }
